[gd_scene load_steps=2 format=3 uid="uid://cbibtl5k17ewk"]

[ext_resource type="Script" path="res://Overlap/Hurtbox.gd" id="1_dhhbf"]

[node name="Hurtbox" type="Area2D"]
script = ExtResource("1_dhhbf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="invincibility_ended" from="." to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
